# calculus

./: CMakeLists.txt  Dockerfile
src/: CMakeLists.txt  main.cc  paintinginteractivewidget.cc  paintinginteractivewidget.hh  paintingwidget.cc  paintingwidget.hh
